#39 Fixed excessive top margin of content on mobile screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -68,11 +68,7 @@ body {
 }
 
 .main {
-	margin-top: $space + $nav-header-height;
-
-	@media (min-width: $mobile-break) {
-		margin-top: 0;
-	}
+	margin-top: 0;
 }
 
 header {
